src/z80asm/z80asm2/t/05-expr/expected/error_undef.txt
% z88dk-z80asm -v -dump-after-cmdline @t/05-expr//input/error_undef.lst t/05-expr//input/empty.asm
t/05-expr/input/error_undef.lst:1:7: error: Undefined constant: FOO
    -DE00=FOO
          ^
t/05-expr/input/error_undef.lst:2:9: error: Undefined constant: BAR
    -DE01=1+BAR
            ^
t/05-expr/input/error_undef.lst:3:7: error: Undefined constant: BAZ
    -DE02=BAZ*3
          ^
verbose	1
ucase_symbols	0
preprocess_only	0
swap_ix_iy	0
date_stamp	0
dump_after_cmdline	1
dump_after_tokenization	0
dump_after_directives	0
dump_after_macro_expansion	0
dump_after_preprocessing	0
m4_options	
perl_options	
cpp_options	
output_dir	
input_file	t/05-expr/input/empty.asm
